Fix alignment of last symbol row

--- a/resources/snippetpanel/snippetpanel.css
+++ b/resources/snippetpanel/snippetpanel.css
@@ -170,7 +170,7 @@ input[type='text']:hover {
 #Symbols .grid div svg {
     padding: 0.2rem;
     zoom: 2.5;
-    transition-property: transform;
+    transition-property: transform color;
     transition-duration: 0.2s;
 }
 
